<resources>
    <string name="app_name">PickaFlick</string>

    <string name="action_settings">Settings</string>

--Title Screen--
    <string name="titleScreenTitle">PickaFlick</string>
    <string name="swipeText">Swipe Left To Continue</string>

--Genre Screen--
    <string name="title_activity_genre">Genre</string>
    <string name="genre_title">Select Genre</string>
    <string name="action_title">Action</string>
    <string name="adventure_title">Adventure</string>
    <string name="animation_title">Animation</string>
    <string name="comedy_title">Comedy</string>
    <string name="crime_title">Crime</string>
    <string name="documentary_title">Documentary</string>
    <string name="drama_title">Drama</string>
    <string name="family_title">Family</string>
    <string name="fantasy_title">Fantasy</string>
    <string name="foreign_title">Foreign</string>
    <string name="history_title">History</string>
    <string name="horror_title">Horror</string>
    <string name="music_title">Music</string>
    <string name="mystery_title">Mystery</string>
    <string name="romance_title">Romance</string>
    <string name="scifi_title">Science Fiction</string>
    <string name="tv_movie_title">TV Movie</string>
    <string name="thriller_title">Thriller</string>
    <string name="war_title">War</string>
    <string name="western_title">Western</string>

--Era Screen--
    <string name="title_activity_era">Select Era</string>
    <string name="_2010s_button">2010\'s</string>
    <string name="_2000s_button">2000\'s</string>
    <string name="_1990s_button">1990\'s</string>
    <string name="_1980s_button">1980\'s</string>
    <string name="_1970s_button">1970\'s</string>
    <string name="_1960s_button">1960\'s</string>

--Mpaa Screen--
    <string name="title_activity_mpaa_ratings">Select An MPAA Rating</string>
    <string name="r_rating">R</string>
    <string name="pg13_rating">PG-13</string>
    <string name="pg_rating">PG</string>
    <string name="g_rating">G</string>

--Movie Rating Screen--
    <string name="title_activity_movie_rating">Select a Movie Rating</string>
    <string name="title_activity_movie_rating1">Out of 10.0</string>
    <string name="above_9.0">Above 9.0</string>
    <string name="above_7.5">Above 7.5</string>
    <string name="above_5.0">Above 5.0</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>


</resources>
